--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "dependencies": {},
-  "devDependencies": {
-    "vitepress": "^1.5.0"
+  "dependencies": {
+    "vitepress": "2.0.0-alpha.5"
   },
   "scripts": {
     "docs:dev": "vitepress dev responses",
